Respect centered images size

Centered images should be cropped all around if they are bigger than the
screen, so we can't limit their sourceSize to the desktop size

Use the provider only for svgs:
Image always considers images from image providers as scalable
(QQuickPixmap::isScalableImageFormat) which changes the internal
calculation of the size, having images being rendered on different sizes
depending if they are loaded from package or directly


BUG:490425
BUG:489250